[project]
name = "durable-workflow"
version = "0.1.0"
description = "A minimal durable workflow engine — resumable, crash-safe, zero framework deps."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
]

[project.scripts]
wf = "workflow.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["workflow"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
